fix java8 & add cacio17